# rishad_test_work

./: .env  .gitignore  Dockerfile  README.md  amvera.yml  docker_compose.yml  pyproject.toml  requirements.txt
src/: db.sqlite3
src/apps/carts/: admin.py  models.py  urls.py  utils.py  views.py
src/apps/carts/migrations/: 0001_initial.py
src/apps/carts/templates/carts/includes/: included_cart.html
src/apps/carts/templatetags/: carts_tags.py
src/apps/goods/: admin.py  apps.py  models.py  urls.py  views.py
src/apps/goods/migrations/: 0001_initial.py
src/apps/goods/templates/goods/: catalog.html  product.html
src/apps/payment/: urls.py  views.py
src/apps/payment/templates/payment/: cancel.html  success.html
src/apps/templates/: base.html
src/apps/templates/includes/: cart_button.html
src/config/: settings.py  urls.py
src/fixtures/: products.json
